--- a/.github/workflows/mayhem.yml
+++ b/.github/workflows/mayhem.yml
@@ -45,7 +45,7 @@ jobs:
         with:
           context: .
           push: true
-          file: fuzz/Dockerfile
+          file: mayhem/Dockerfile
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
     
@@ -60,10 +60,10 @@ jobs:
       fail-fast: false
       matrix:
         mayhemfile:
-          - fuzz/mayhemfiles/Mayhemfile_fifodiskqueue
-          - fuzz/mayhemfiles/Mayhemfile_lifodiskqueue
-          - fuzz/mayhemfiles/Mayhemfile_priorityqueue
-          - fuzz/mayhemfiles/Mayhemfile_rrqueue
+          - mayhem/mayhemfiles/fifodiskqueue.mayhemfile
+          - mayhem/mayhemfiles/lifodiskqueue.mayhemfile
+          - mayhem/mayhemfiles/priorityqueue.mayhemfile
+          - mayhem/mayhemfiles/rrqueue.mayhemfile
 
     steps:
       - uses: actions/checkout@v3
